--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -70,21 +70,18 @@ jobs:
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
+
           current_date=$(date +%Y-%m-%d)
-          rm -rf reports/zap_baseline_scan/${current_date} && mkdir -p reports/zap_baseline_scan/${current_date}
+          mkdir -p reports/zap_baseline_scan/${current_date}
+          
           export TZ=America/Sao_Paulo
           hour=$(date +'%Y-%m-%d_%H-%M-%S')
           mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
+
           cp -R ${{github.workspace}}/report_json_${hour}.json reports/zap_baseline_scan/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
-          
-      # - name: Remove ZAP Baseline Reports 
-      #   run: |
-      #     rm report_html.html
-      #     rm report_md.md
-      #     rm report_json.json
 
   zap_full_scan:    
     name: 'zap_full_scan'
