--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -73,9 +73,9 @@ jobs:
           current_date=$(date +%Y-%m-%d)
           mkdir -p reports/zap_baseline_scan/${current_date}
           export TZ=America/Sao_Paulo
-          hour=$(date +'%Y-%m-%d_%H-%M-%S')
+          hour=$(date +'%d-%m-%Y_%H-%M-%S')
           mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
-          cp -R ${{github.workspace}}/report_json_${hour}.json reports/zap_baseline_scan/${current_date}/
+          cp ${{github.workspace}}/report_json_${hour}.json reports/zap_baseline_scan/${current_date}/
           git add reports/zap_full_scan/${current_date}/report_json_${hour}.json
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
