--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -70,7 +70,7 @@ jobs:
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
-          current_date=$(date +%Y-%m-%d)
+          current_date=$(date +%d-%m-%Y)
           mkdir -p reports/zap_baseline_scan/${current_date}
           export TZ=America/Sao_Paulo
           hour=$(date +'%d-%m-%Y_%H-%M-%S')
@@ -123,9 +123,13 @@ jobs:
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/zap_full_scan/${current_date} && mkdir -p reports/zap_full_scan/${current_date}
-          cp ${{github.workspace}}/report_json.json reports/zap_full_scan/${current_date}/
+          current_date=$(date +%d-%m-%Y)
+          mkdir -p reports/zap_full_scan/${current_date}
+          export TZ=America/Sao_Paulo
+          hour=$(date +'%d-%m-%Y_%H-%M-%S')
+          mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
+          cp ${{github.workspace}}/report_json_${hour}.json reports/zap_full_scan/${current_date}/
+          git add reports/zap_full_scan/${current_date}/report_json_${hour}.json
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
@@ -165,6 +169,7 @@ jobs:
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
           additional_args: "-Option FAILURES=0 -o $FILE_PATH -Format json"
+        continue-on-error: true
 
       - name: Upload Nikto Report to Action
         uses: actions/upload-artifact@v4
@@ -178,9 +183,13 @@ jobs:
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/nikto/${current_date} && mkdir -p reports/nikto/${current_date}
-          cp -R ${{github.workspace}}/nikto_out.json reports/nikto/${current_date}/
+          current_date=$(date +%d-%m-%Y)
+          mkdir -p reports/nikto/${current_date}
+          export TZ=America/Sao_Paulo
+          hour=$(date +'%d-%m-%Y_%H-%M-%S')
+          mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
+          cp ${{github.workspace}}/report_json_${hour}.json reports/nikto/${current_date}/
+          git add reports/nikto/${current_date}/report_json_${hour}.json
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
