--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -66,20 +66,14 @@ jobs:
 
       - name: Save ZAP Baseline Scan Reports
         if: always()
+        env:
+          TOKEN_GIT: ${{ secrets.TOKEN_GIT }}
+          NAME_REPO_GIT: ${{ secrets.NAME_REPO_GIT }}
+          TOOL_NAME: zap_baseline_scan
         run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
-          current_date=$(date +%d-%m-%Y)
-          mkdir -p reports/zap_baseline_scan/${current_date}
-          export TZ=America/Sao_Paulo
-          hour=$(date +'%d-%m-%Y_%H-%M-%S')
-          mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
-          cp ${{github.workspace}}/report_json_${hour}.json reports/zap_baseline_scan/${current_date}/
-          git add reports/zap_baseline_scan/${current_date}/report_json_${hour}.json
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin develop
+          cd scripts
+          chmod +x save_report.sh
+          ./save_report.sh $GITHUB_WORKSPACE "${{github.event.repository.name }}" "${{ github.ref_name }}"
 
   zap_full_scan:    
     name: 'zap_full_scan'
@@ -122,6 +116,7 @@ jobs:
         env:
           TOKEN_GIT: ${{ secrets.TOKEN_GIT }}
           NAME_REPO_GIT: ${{ secrets.NAME_REPO_GIT }}
+          TOOL_NAME: zap_full_scan
         run: |
           cd scripts
           chmod +x save_report.sh
@@ -166,17 +161,12 @@ jobs:
       
       - name: Save Nikto Report
         if: always()
+        env:
+          TOKEN_GIT: ${{ secrets.TOKEN_GIT }}
+          NAME_REPO_GIT: ${{ secrets.NAME_REPO_GIT }}
+          TOOL_NAME: nikto
         run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
-          current_date=$(date +%d-%m-%Y)
-          mkdir -p reports/nikto/${current_date}
-          export TZ=America/Sao_Paulo
-          hour=$(date +'%d-%m-%Y_%H-%M-%S')
-          mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
-          cp ${{github.workspace}}/report_json_${hour}.json reports/nikto/${current_date}/
-          git add reports/nikto/${current_date}/report_json_${hour}.json
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin develop
+          cd scripts
+          chmod +x save_report.sh
+          ./save_report.sh $GITHUB_WORKSPACE "${{github.event.repository.name }}" "${{ github.ref_name }}"
+    
