--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -128,6 +128,9 @@ jobs:
     needs: config_git
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        
       - name: Restore Git Config
         uses: actions/cache@v4
         with:
