--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -20,14 +20,33 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
-
+      
       - name: install npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-        run: npm ci
+        run: npm-ci
+      
+      - name: install npm ci
+        run: find . name npm-ci
 
-      # SCA
-      # SNYK
+      - name: Cache Git Config
+        uses: actions/cache@v4
+        with:
+          path: |
+            /home/runner/.gitconfig
+            /home/runner/package-lock.json
+          key: git-npm
+
+    snyk:
+      name: 'SCA'
+      runs-on: ubuntu-latest
+      permissions:
+        security-events: write
+        pull-requests: write
+      
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         continue-on-error: true
@@ -41,8 +60,17 @@ jobs:
         with:
           sarif_file: snyk.sarif
           category: my-analysis-tool
+    
+    owasp_depcheck:
+      name: 'SCA'
+      runs-on: ubuntu-latest
+      permissions:
+        security-events: write
+        pull-requests: write
       
-      # OWASP DEPENDENCY CHECK
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
