--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -44,22 +44,23 @@ jobs:
       security-events: write
       pull-requests: write
     
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@master
-      continue-on-error: true
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --sarif-file-output=snyk.sarif
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
 
-    - name: Upload result to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: snyk.sarif
-        category: my-analysis-tool
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk.sarif
+          category: my-analysis-tool
     
   owasp_depcheck:
     name: 'SCA'
@@ -68,38 +69,39 @@ jobs:
       security-events: write
       pull-requests: write
     
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Depcheck
-      uses: dependency-check/Dependency-Check_Action@main
-      id: Depcheck
-      with:
-        project: 'tcc-password-manager'
-        path: './'
-        format: 'ALL'
-        out: 'depcheck'
-        args: >
-          --enableRetired
-          --nvdApiKey ${{ secrets.NVD_API_KEY }}
-    
-    - name: Upload SARIF results file
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: depcheck/dependency-check-report.sarif
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'tcc-password-manager'
+          path: './'
+          format: 'ALL'
+          out: 'depcheck'
+          args: >
+            --enableRetired
+            --nvdApiKey ${{ secrets.NVD_API_KEY }}
+      
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: depcheck/dependency-check-report.sarif
 
-    - name: Upload Test results
-      uses: actions/upload-artifact@v4
-      with:
-          name: Depcheck report
-          path:  ${{github.workspace}}/depcheck
+      - name: Upload Test results
+        uses: actions/upload-artifact@v4
+        with:
+            name: Depcheck report
+            path:  ${{github.workspace}}/depcheck
 
-    - name: PR comment with file
-      uses: thollander/actions-comment-pull-request@v2
-      env:
-        PR_NUMBER: ${{ github.event.number }}
-      with:
-        message: |
-          Hello World!
-        filePath: depcheck
-        pr_number: $PR_NUMBER
+      - name: PR comment with file
+        uses: thollander/actions-comment-pull-request@v2
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+        with:
+          message: |
+            Hello World!
+          filePath: depcheck
+          pr_number: $PR_NUMBER
