--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -5,7 +5,7 @@ on:
     branches: [results]
 
 jobs:
-  sca_depcheck:
+  config_git:
     name: 'git_config'
     runs-on: ubuntu-latest
     permissions:
@@ -25,9 +25,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
         run: npm ci
-      
-      - name: install npm ci
-        run: find . name npm-ci
 
       - name: Cache Git Config
         uses: actions/cache@v4
@@ -40,6 +37,7 @@ jobs:
   snyk:
     name: 'snyk'
     runs-on: ubuntu-latest
+    needs: config_git
     permissions:
       security-events: write
       pull-requests: write
@@ -73,6 +71,7 @@ jobs:
   owasp_depcheck:
     name: 'owasp_depcheck'
     runs-on: ubuntu-latest
+    needs: config_git
     permissions:
       security-events: write
       pull-requests: write
