--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -32,6 +32,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
+            /home/runner/node_modules/
           key: git-npm
 
   snyk:
@@ -52,6 +53,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
+            /home/runner/node_modules/
           key: git-npm
 
       - name: Run Snyk to check for vulnerabilities
@@ -86,6 +88,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
+            /home/runner/node_modules/
           key: git-npm
 
       - name: Depcheck
