--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -35,7 +35,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
-            /home/runner/node_modules/
+            ./node_modules/
           key: git-npm
 
   snyk:
@@ -56,7 +56,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
-            /home/runner/node_modules/
+            ./node_modules/
           key: git-npm
 
       - name: Run Snyk to check for vulnerabilities
@@ -91,7 +91,7 @@ jobs:
           path: |
             /home/runner/.gitconfig
             /home/runner/package-lock.json
-            /home/runner/node_modules/
+            ./node_modules/
           key: git-npm
 
       - name: Depcheck
