--- a/.github/workflows/build_sast.yaml
+++ b/.github/workflows/build_sast.yaml
@@ -1,12 +1,12 @@
-name: BUILD_SAST
+name: Build and SAST
 
 on:
   pull_request:
     branches: [develop]
 
 jobs:
-  build_and_sca:
-    name: 'Build and SAST'
+  build_sast:
+    name: 'build_sast'
     runs-on: ubuntu-latest
 
     steps:
@@ -17,9 +17,8 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
-  
-      # NPM AUDIT
-      - name: run npm audit
+
+      - name: Run npm audit
         uses: oke-py/npm-audit-action@v2
         with:
           audit_level: low
@@ -27,12 +26,11 @@ jobs:
           github_token: ${{ secrets.TOKEN_GIT }}
           issue_labels: vulnerability
 
-      - name: install npm ci
+      - name: Install npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
         run: npm ci
 
-      # SonarCloud Scan
       - name: SonarCloud
         uses: actions/checkout@v3
         with:
