fix: fix depcheck tests

--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -1,4 +1,4 @@
-name: HOMOLOG_AND_DAST
+name: Homolog and DAST
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Config GitHub
         run: |
