--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Create .env
+      - name: Create env
         run: |
             touch ./scripts/.env
             echo TOKEN=${{ secrets.TOKEN_GIT }} >> ./scripts/.env
