--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -6,6 +6,10 @@ env:
 on:
   push:
     branches: [develop]
+  pull_request:
+    branches:
+      - develop
+    types: [ closed ]
 
 defaults:
   run:
