--- a/.github/workflows/depcheck.yaml
+++ b/.github/workflows/depcheck.yaml
@@ -5,8 +5,8 @@ on:
     branches: [develop]
 
 jobs:
-  config_git:
-    name: 'config_git'
+  config:
+    name: 'config'
     runs-on: ubuntu-latest
     permissions:
       security-events: write
@@ -38,7 +38,7 @@ jobs:
   snyk:
     name: 'snyk'
     runs-on: ubuntu-latest
-    needs: config_git
+    needs: config
     permissions:
       security-events: write
       pull-requests: write
@@ -73,7 +73,7 @@ jobs:
   owasp_depcheck:
     name: 'owasp_depcheck'
     runs-on: ubuntu-latest
-    needs: config_git
+    needs: config
     permissions:
       security-events: write
       pull-requests: write
