--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
   schedule:
     - cron: '21 13 * * 1'
 
@@ -25,6 +25,7 @@ jobs:
         include:
         - language: javascript-typescript
           build-mode: none
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -34,7 +35,7 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        
+      
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
