--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
     types: [ closed ]
+  push:
+    branches:
+      - main
     
 jobs:
   release:
@@ -24,4 +27,4 @@ jobs:
             echo RELEASE_PATCH=${{ contains(github.event.pull_request.labels.*.name, 'PATCH RELEASE') }} >> ./scripts/.env
 
       - name: Create Release
-        run: cd scripts && npm install && node release.js
+        run: cd scripts && yarn install && node release.js
