--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/styled-components": "^5.1.32",
+    "@types/zxcvbn": "^4.4.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.2.0",
