--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Create env
+      - name: Create .env
         run: |
             touch ./scripts/.env
             echo TOKEN=${{ secrets.TOKEN_GIT }} >> ./scripts/.env
